# jsweb

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
Tests/: conftest.py  script_install_required_modules_for_test.py  test_authentication.py  test_database.py  test_features.py  test_forms.py  test_middleware.py  test_performance.py  test_request_response.py  test_routing.py  test_security.py
docs/: JSWEB_OPENAPI_GUIDE.md  admin.md  blueprints.md  cli.md  configuration.md  database.md  forms.md  getting-started.md  index.md  project-structure.md  routing.md  templating.md
jsweb/: __init__.py  app.py  auth.py  blueprints.py  cli.py  database.py  forms.py  logging_config.py  middleware.py  request.py  response.py  routing.py  security.py  server.py  static.py  template.py  utils.py  validators.py
jsweb/admin/: views.py
jsweb/docs/: __init__.py  auto_validation.py  decorators.py  introspection.py  registry.py  schema_builder.py  setup.py  ui_handlers.py  validation_middleware.py
jsweb/dto/: __init__.py  core.py  decorators.py  models.py  validators.py
jsweb/project_templates/alembic/: env.py
overrides/: main.html
sample-app/: app.py  config.py  jsweb.db  models.py
sample-app/migrations/: 001_initial_db.sql  002_initial_db1.sql  migration_log.txt
sample-app/templates/: user_added.html  welcome.html
scripts/: .pre-commit-setup.bat  .pre-commit-setup.sh  run_tests.bat  run_tests.sh
