[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsweb"
version = "1.2.1"
description = "JsWeb - A lightweight and modern Python web framework designed for speed and simplicity."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Jones Peter", email = "jonespetersoftware@gmail.com" }
]

keywords = [
    "JsWeb", "Framework", "Web", "Python", "ASGI", "Web Server", "ORM",
    "Database", "Routing", "Authentication", "Forms", "CLI", "Admin"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

dependencies = [
    "jinja2",
    "sqlalchemy",
    "werkzeug",
    "itsdangerous",
    "alembic",
    "markupsafe",
    "uvicorn",
    "pydantic>=2.0,<3.0"  # Required for DTO system and OpenAPI docs
]

[project.optional-dependencies]
dev = [
    # Development server
    "watchdog>=3.0",
    "websockets>=11.0",
    # Testing
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    # Code formatting
    "black>=24.0",
    "isort>=5.12",
    # Linting
    "flake8>=7.0",
    "flake8-bugbear>=23.0",
    "flake8-comprehensions>=3.14",
    # Type checking
    "mypy>=1.7",
    # Security scanning
    "bandit>=1.7",
    "safety>=2.3",
    # Pre-commit hooks
    "pre-commit>=3.5",
]
qr = ["qrcode[pil]"]
postgresql = ["psycopg2-binary"]

[project.scripts]
jsweb = "jsweb.cli:cli"

[project.urls]
Documentation = "https://jsweb-framework.site/"
Homepage = "https://github.com/Jsweb-Tech/jsweb"
"Bug Tracker" = "https://github.com/Jsweb-Tech/jsweb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jsweb*"]

[tool.setuptools.package-data]
jsweb = [
    # Core framework files
    "templates/*.html",
    "static/*.css",
    "static/*.js",
    "static/*.png",
    
    # Project generation templates
    "project_templates/*.jinja",
    "project_templates/alembic/*",

    # --- UPDATED FOR ADMIN SUB-PACKAGE ---
    # Include all templates and static files from within the new 'admin' package
    "admin/templates/*.html",
    "admin/static/*"
]

[tool.pytest.ini_options]
testpaths = ["Tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --cov=jsweb --cov-report=html --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time to run",
    "asyncio: Async tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["jsweb"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod"
]
precision = 2
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["jsweb"]
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3


